--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
-h1{
-    text-align: center;
-    font-family: 'Courier New', Courier, monospace;
-}
 h2{
     font-family: Arial, Helvetica, sans-serif;
 }
 body{
-    background-color: rgb(25, 25, 150);
+    background-color: #004D98;
+}
+a{
+    color: black;
 }
